--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
         <![endif]-->
 
         <h1>
-            <span id="t">T</span>
-            <span id="e">E</span>
-            <span id="t2">T</span>
-            <span id="r">R</span>
-            <span id="i">I</span>
-            <span id="s">S</span>
+            <span class="t">T</span>
+            <span class="e">E</span>
+            <span class="t2">T</span>
+            <span class="r">R</span>
+            <span class="i">I</span>
+            <span class="s">S</span>
+            <div class="game-over">
+                <p>Thanks for playing!</p>
+                <p>Your Score:</p>
+                <p class="score">0</p>
+                <button class="reset-button">Play Again</button>
+            </div>
         </h1>
 
     <div class="container">
@@ -275,17 +281,23 @@
                 <div></div>
             </div>
 
-            <h3>Score:<span id="score">0</span></h3>
-            <h3>Level:<span id="level">0</span></h3>
-            <h3>Lines:<span id="level">0</span></h3>
+            <h3 class="r">Score:<span class="score">0</span></h3>
+            <h3 class="e">Level:<span id="level">0</span></h3>
+            <h3 class="t2">Lines:<span id="lines">0</span></h3>
             <button id="start-button">Start/Pause</button>
-            <button id="reset-button">Reset</button>
+            <button class="reset-button">Reset</button>
+            <h2>How To Play:</h2>
+            <p class="how-to-play">Use the left and right keyboard arrows to move the tetromino pieces left and right.</p>
+            <p class="how-to-play">The up arrow rotates the tetromino piece. You can use the down arrow to speed up the falling tetromino piece.</p>
 
         </div>
 
+        
+
     </div>
 
-    <script src="" async defer></script>
+    <footer>&copy; Kevin Koene | <a href="https://kevinkoene.nl/" target="_blank">kevinkoene.nl</a></footer>
+
 </body>
 
 </html>
