ready to deploy v1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>Thanks for playing!</p>
             <p>Your Score:</p>
             <p class="score">0</p>
-            <button class="reset-button">Play Again</button>
+            <button id="play-again-button">Play Again</button>
         </div>
     </h1>
 
@@ -286,7 +286,7 @@
             <h3 class="e">Level:<span id="level">0</span></h3>
             <h3 class="t2">Lines:<span id="lines">0</span></h3>
             <button id="start-button">Start/Pause</button>
-            <button class="reset-button">Reset</button>
+            <button id="reset-button">Reset</button>
             <h2>How To Play:</h2>
             <p class="how-to-play">Use the left and right keyboard arrows to move the tetromino pieces left and right.
             </p>
