small css & html changes to make page better viewable on smaller laptop screens

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="">
 </head>
 
-<body>
+<body id="body">
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -282,16 +282,13 @@
                 <div></div>
             </div>
 
-            <h3 class="r">Score:<span class="score">0</span></h3>
-            <h3 class="e">Level:<span id="level">0</span></h3>
-            <h3 class="t2">Lines:<span id="lines">0</span></h3>
+            <h2 class="r">Score:<span class="score">0</span></h3>
+            <h2 class="e">Level:<span id="level">0</span></h3>
+            <h2 class="t2">Lines:<span id="lines">0</span></h3>
             <button id="start-button">Start/Pause</button>
             <button id="reset-button">Reset</button>
             <h2>How To Play:</h2>
-            <p class="how-to-play">Use the left and right keyboard arrows to move the tetromino pieces left and right.
-            </p>
-            <p class="how-to-play">The up arrow rotates the tetromino piece. You can use the down arrow to speed up the
-                falling tetromino piece.</p>
+            <p class="how-to-play">Press the down arrow on your keyboard to rotate</p>
 
         </div>
 
